[project]
name = "mainproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]
